--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/websockets": "^9.2.1",
+    "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "tiny-typed-emitter": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -35,6 +39,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
