--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "tiny-typed-emitter": "^2.1.0"
   },
