--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "28.1.8",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
